--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -42,7 +42,7 @@
 }
 .btn-cart:hover {
   background-color: rgb(4, 0, 255);
-  color: white;
+  color: rgb(236, 225, 225);
 }
 
 @media screen and (max-width: 480px) {
